Added Amazon Product with discounted price and Amazon User Tests.